# rag-engine

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  generate_charts.py  latency_profile.json  legalbench_results.md  medqa_results.md  recall_by_corpus_size.json  reranker_ablation.json  results.json  run_benchmarks.py  run_demo.py  sota_comparison.md  vs_competitors.json
evals/: ragas_eval.py
examples/: quickstart.py
rust_core/: Cargo.toml
rust_core/src/: lib.rs
src/rag_engine/: __init__.py  api.py  chunker.py  config.py  hyde.py  indexer.py  late_interaction.py  monitoring.py  multi_query.py  reranker.py  retriever.py
tests/: test_retriever.py
