[package]
name = "rag-engine-core"
version = "0.4.2"
edition = "2021"
authors = ["natiixnt"]
description = "High-performance HNSW index for RAG engine retrieval"

[lib]
name = "rag_engine_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
rand = "0.8"
parking_lot = "0.12"
rayon = "1.8"
ordered-float = "4.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
